# CS292C

./: .gitignore  PROPOSAL.md  README.md  REVIEW.md  TALK.md
projects/proj1/: Makefile  README.html  README.md  binary_search.dfy  dune-project
projects/proj1/examples/: binary_search.dfy  even_odd.dfy  fib.dfy  fib_arr.dfy  map_min.dfy  max.dfy  max_arr.dfy  max_arr_rec.dfy  max_fn.dfy  min2d.dfy  mul.dfy  mul_arr.dfy  mul_arr_fn.dfy  mul_fn.dfy  rand.dfy  test.difny  while1d.dfy  while2d.dfy  while2d_weak.dfy  while_false.dfy  while_true.dfy
projects/proj1/lib/: desugar.ml  desugar.mli  dune  eval.ml  iarray.ml  lang.ml  lexer.mll  menhir_parser.mly  parser.ml  pretty.ml  pretty.mli  smt.ml  smt.mli  todo.ml  verify.ml  verify.mli
projects/proj1/test/: dune  test_proj1.ml
projects/proj1/test/public/: bench.csv  binary_search.dfy  binary_search2.dfy  binary_search2.dfy.expected  binary_search_bad1.dfy  binary_search_bad1.dfy.expected  binary_search_bad2.dfy  even_odd.dfy  even_odd.dfy.expected  even_odd_bad.dfy  even_odd_bad.dfy.expected  fib.dfy  fib_arr.dfy  fib_arr_bad.dfy  fib_arr_bad.dfy.expected  fib_diverge.dfy  fib_diverge.dfy.expected  fn_args.dfy  fn_args.dfy.expected  fn_args2.dfy  fn_args3.dfy  fn_args3.dfy.expected  fn_ret.dfy  fn_ret.dfy.expected  fn_ret2.dfy  fn_ret2.dfy.expected  fn_ret3.dfy  map_min.dfy  max.dfy  (+28 more)
projects/proj2/: .ocamlformat  Makefile  README.md  dune-project
projects/proj2/lib/: dune  utils.ml
projects/proj2/test/: cdcl_proof.ml  cdcl_sat.ml  cdcl_unsat.ml  dpll_proof.ml  dpll_sat.ml  dpll_unsat.ml  dune  test_solver.ml
(+256 files in other folders)
