(lang dune 3.12)

(name proj2)

(generate_opam_files true)

(source
 (github fredfeng/CS292C))

(authors "Junrui Liu")

(maintainers "Junrui Liu")

(documentation https://url/to/documentation)

(using menhir 2.1)

(package
 (name proj2)
 (synopsis "CS292C Project 2")
 (depends
  ocaml
  dune
  base
  stdio
  menhir
  logs
  nice_parser
  fmt
  cmdliner
  ppx_jane
  ppx_deriving
  alcotest
  odoc
  csv))
